--- a/home.html
+++ b/home.html
@@ -9,18 +9,20 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #9dc4ff; /* Renk paletindeki açık mavi tonu */
             padding: 0; /* Sayfa kenarlarındaki boşluk */
+            color: #fff; /* Beyaz */
         }
         header {
-            background-color: #333;
-            color: #fff;
+            background-color: #001d3d; /* Oxford Blue */
+            color: #fff; /* Başlık metin rengi */
             padding: 10px;
             text-align: center;
-            margin-bottom: 20px; /* Başlık ile diğer içerik arasındaki boşluk */
+            margin: 0; /* Başlık ile diğer içerik arasındaki boşluk */
             position: fixed; /* Header'ı sabit konuma getirir */
             width: 100%; /* Header'ı ekran genişliğine yay */
             z-index: 1000; /* Header'ın diğer içeriklerin üstünde olmasını sağlar */
+            top: 0; /* Sayfanın en üstüne sabitle */
         }
         nav {
             text-align: center;
@@ -29,26 +31,32 @@
             display: flex;
             flex-direction: column; /* Kutuların sütun şeklinde alt alta gelmesini sağlar */
             align-items: center;
-            margin-top: 60px; /* Header'ın üst kısmından 60 piksel aşağıda başlasın */
+            margin-top: 100px; /* Header'ın üst kısmından 100 piksel aşağıda başlasın */
             padding-top: 20px; /* Üst boşluk */
         }
         .social-box {
             width: calc(50% - 20px); /* Sayfa genişliğinin yarısı kadar, kenar boşluklar hariç */
             height: 75px; /* Kutuların yüksekliği */
-            margin: 10px;
-            background-color: #fff;
-            border: 2px solid #ccc;
+            margin: 10px; /* Her bir kutunun boşluğu */
+            background-color: #001d3d; /* Oxford Blue */
+            border: 2px solid #fff; /* Kutu kenar rengi (beyaz) */
             border-radius: 10px;
             display: flex;
             justify-content: center;
             align-items: center;
             text-align: center;
             font-size: 20px;
-            color: #333;
+            color: #fff; /* Beyaz */ /* Kutu içerik metin rengi */
             text-decoration: none;
+            transition: background-color 0.3s ease; /* Hover efekti */
         }
         .social-box:hover {
-            background-color: #f5f5f5;
+            background-color: #ffd60a; /* Gold */
+            color: #000814; /* Rich black */
+        }
+        .social-box a {
+            color: #fff; /* Beyaz */ /* Link metin rengi */
+            text-decoration: none; /* Link altı çizgisi kaldırma */
         }
     </style>
 </head>
