--- a/home.html
+++ b/home.html
@@ -9,16 +9,17 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #9dc4ff; /* Renk paletindeki açık mavi tonu */
+            background-color: #e5e5e5; /* Arkaplan rengi */
             padding: 0; /* Sayfa kenarlarındaki boşluk */
             color: #fff; /* Beyaz */
         }
         header {
-            background-color: #001d3d; /* Oxford Blue */
+            background-color: #000000; /* Header arka plan rengi */
             color: #fff; /* Başlık metin rengi */
             padding: 10px;
             text-align: center;
             margin: 0; /* Başlık ile diğer içerik arasındaki boşluk */
+            margin-bottom: 150px; /* Header'ın altındaki boşluk */
             position: fixed; /* Header'ı sabit konuma getirir */
             width: 100%; /* Header'ı ekran genişliğine yay */
             z-index: 1000; /* Header'ın diğer içeriklerin üstünde olmasını sağlar */
@@ -31,7 +32,7 @@
             display: flex;
             flex-direction: column; /* Kutuların sütun şeklinde alt alta gelmesini sağlar */
             align-items: center;
-            margin-top: 100px; /* Header'ın üst kısmından 100 piksel aşağıda başlasın */
+            margin-top: 150px; /* Header'ın üst kısmından 100 piksel aşağıda başlasın */
             padding-top: 20px; /* Üst boşluk */
         }
         .social-box {
@@ -51,7 +52,7 @@
             transition: background-color 0.3s ease; /* Hover efekti */
         }
         .social-box:hover {
-            background-color: #ffd60a; /* Gold */
+            background-color: #fca311; /* Değiştirilen arka plan rengi */
             color: #000814; /* Rich black */
         }
         .social-box a {
@@ -62,7 +63,7 @@
 </head>
 <body>
     <header>
-        <h1>Web Sitesi</h1>
+        <h1>Hello World 👋</h1>
         <nav>
             <a href="home.html">Home Page</a> |
             <a href="about.html">About</a>
